# module_test

./: .gitignore  CMakeLists.txt  README.md  modules.cmake
c_sources/: first  first.i  first.s
include/: Log.h
src/: Log.cpp  greeter.cppm  log.cppm  main.cpp
tests/: CMakeLists.txt  LogTest.cpp
